[gd_scene load_steps=5 format=3 uid="uid://ri0c7iffkrao"]

[ext_resource type="Script" path="res://UnitInstance.gd" id="1_8f2nx"]

[sub_resource type="LabelSettings" id="LabelSettings_lypks"]
font_size = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6je4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrop1"]
bg_color = Color(0.929412, 0.333333, 0.345098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="UnitInstance" type="Node2D" node_paths=PackedStringArray("visualParent", "abilityParent", "itemsParent")]
script = ExtResource("1_8f2nx")
visualParent = NodePath("Abilities")
abilityParent = NodePath(".")
itemsParent = NodePath("Visual")

[node name="Visual" type="Node2D" parent="."]

[node name="Abilities" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="HealthBarParent" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 3
anchors_preset = 0
offset_top = 48.0
offset_right = 64.0
offset_bottom = 64.0

[node name="ColorRect" type="ColorRect" parent="HealthBarParent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.741176, 0.486275, 0.215686, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="HealthBarParent"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 18.0
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="HP Val" type="Label" parent="HealthBarParent/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "25"
label_settings = SubResource("LabelSettings_lypks")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="HealthBarParent/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_n6je4")
theme_override_styles/fill = SubResource("StyleBoxFlat_yrop1")
max_value = 1.0
value = 0.5
show_percentage = false
